# Secure-chat-app

./: 1_00febb89-9098-4554-8acb-f4927daf5a28_cert.pem  1_00febb89-9098-4554-8acb-f4927daf5a28_key.pem  1_45cbaec0-009c-4a7c-96d6-be7e32f52a7e_cert.pem  1_45cbaec0-009c-4a7c-96d6-be7e32f52a7e_key.pem  1_7d78b7c2-462b-40d0-8a73-09ef8bf406ad_cert.pem  1_7d78b7c2-462b-40d0-8a73-09ef8bf406ad_key.pem  1_a5b8e917-8658-4b82-bc3e-351b7042749c_cert.pem  1_a5b8e917-8658-4b82-bc3e-351b7042749c_key.pem  1_file.txt  2_25fc5a70-2148-470e-98f6-b55d2b6e3c3b_cert.pem  2_25fc5a70-2148-470e-98f6-b55d2b6e3c3b_key.pem  2_8a83623f-c0c5-47bc-b676-93efb49cddfb_cert.pem  2_8a83623f-c0c5-47bc-b676-93efb49cddfb_key.pem  2_9a968630-099a-4f3a-9fa8-f7ae301b9a2a_cert.pem  2_9a968630-099a-4f3a-9fa8-f7ae301b9a2a_key.pem  CMakeLists.txt  Distributed Chat Protocol (DCP) - Based on Modified XMPP.md  Dockerfile  README.md  SECURITY.md  auth.py  cert.pem  clclient.py  client-commandline.py  client.py  clserver.py  encryption.py  file_server.py  key.pem  login.html  mf_ed2da87d-3642-442b-b772-016de5ddd99a_cert.pem  mf_ed2da87d-3642-442b-b772-016de5ddd99a_key.pem  mj_6beb110a-ed9d-4474-983d-4eaf09f3396f_cert.pem  mj_6beb110a-ed9d-4474-983d-4eaf09f3396f_key.pem  mj_9a4abded-f700-4d2f-91c3-4512ace6bc21_cert.pem  mj_9a4abded-f700-4d2f-91c3-4512ace6bc21_key.pem  peerreview issues.txt  readme.txt  reflection.txt  requirements.txt  (+5 more)
.devcontainer/: devcontainer.json
client/: CMakeLists.txt  client.cpp  client.py
server/: CMakeLists.txt  encryption.py  server.cpp  server.py
src/: client.cpp  client.h  encryption.cpp  encryption.h  main.cpp  message.cpp  message.h  server.cpp  server.h
